<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/drawer_menu_group1">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"
            android:checked="true"/>
        <item
            android:id="@+id/gridFragment"
            android:icon="@drawable/ic_grid_on_black_24dp"
            android:title="@string/nav_grid"/>
        <item
            android:id="@+id/linearFragment"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_list" />
    </group>
    <group android:id="@+id/drawer_menu_group2">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings"/>
    </group>
</menu>